deployments/kubernetes/alpine-req-000024/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alpinenew
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine
  namespace: alpinenew
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alpine
      app.kubernetes.io/name: alpine
  template:
    metadata:
      labels:
        app: alpine
        app.kubernetes.io/name: alpine
        app.kubernetes.io/managed-by: ai-deployment-platform
      namespace: alpinenew
    spec:
      containers:
      - name: alpine
        image: alpine:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: alpine
  namespace: alpinenew
  labels:
    app: alpine
    app.kubernetes.io/name: alpine
    app.kubernetes.io/managed-by: ai-deployment-platform
spec:
  selector:
    app: alpine
    app.kubernetes.io/name: alpine
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: metrics
    port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alpine
  namespace: alpinenew
  labels:
    app: alpine
    app.kubernetes.io/name: alpine
    app.kubernetes.io/managed-by: ai-deployment-platform
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: alpine.hpe.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alpine
            port:
              number: 80
